syntax = "proto3";

package course;

service CourseService {
    rpc CreateCourse (CourseRequest) returns (CourseResponse);
    rpc GetCourse (CourseID) returns (CourseResponse);
    rpc EnrollCourse (EnrollRequest) returns (EnrollResponse);
}

message CourseRequest {
    string title = 1;
    string description = 2;
}

message CourseResponse {
    string id = 1;
    string title = 2;
    string description = 3;
}

message CourseID 
